Fill Java/Language/Records